--- a/Stopwatch/public/index.html
+++ b/Stopwatch/public/index.html
@@ -13,9 +13,9 @@
       <span id="DispMin">00</span>:<span id="DispSec">00</span>:<span id="DispMS">00</span>
     </div>
     <div class="buttons">
-      <button id="Start">Start</button>
-      <button id="Pause">Pause</button>
-      <button id="Reset">Reset</button>
+      <button id="Start" onclick="start()">Start</button>
+      <button id="Pause" onclick="pause()">Pause</button>
+      <button id="Reset" onclick="reset()">Reset</button>
     </div>
   </div>
   <script src="app.js"></script>
